samples/_failures_safe/1761321285_57efb3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_02406a13.c: In function ‘main’:
./samples/SAFE/__tmp_02406a13.c:150:25: error: ‘read’ undeclared (first use in this function); did you mean ‘fread’?
  150 |             mat2.rows = read
      |                         ^~~~
      |                         fread
./samples/SAFE/__tmp_02406a13.c:150:25: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_02406a13.c:150:29: error: expected ‘;’ at end of input
  150 |             mat2.rows = read
      |                             ^
      |                             ;
./samples/SAFE/__tmp_02406a13.c:150:13: error: expected declaration or statement at end of input
  150 |             mat2.rows = read
      |             ^~~~
./samples/SAFE/__tmp_02406a13.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_02406a13.c:150:13: error: expected declaration or statement at end of input
